Fix layout issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -209,3 +209,7 @@ body {
     right: 20px;
   }
 }
+
+#select-color {
+  margin-top: 17px;
+}
